--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
-* {
-    font-family: 'Montserrat', sans-serif;
-    /* margin: 0;    
-       padding: 0;  */   
+* {  
+	margin: 0;    
+	padding: 0;
     transition: .3s all ease;
     /* background: blue; */
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 
 .wrapper{
