--- a/css/style.css
+++ b/css/style.css
@@ -1,234 +1,113 @@
 * {  
 	margin: 0;    
 	padding: 0;
-    transition: .3s all ease;
-    /* background: blue; */
-    /* box-sizing: border-box; */
 }
-p{
+
+p {
 	color: white;
 }
 
 .wrapper{
-	background: grey;
-	height: 800px;
-	width: 90%;
-   /*  min-width: 500px;    (минимальная ширина сайта)
-   max-width: 1200px; */
+    background: black;
+    height: 800px;
+    width: 90%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
-
-/* header================================================= */
-
+/* =========================header====================== */
 .header{
-	height: 100px;
-	background: red;
+	height: 70px;
+	background: #383535;
 	display: flex;
 	align-items: center;
     justify-content: space-between; 
-
 }
-
-
 .triangles{
-	height: 100px;
-	width: 100px;
+	height: 70px;
+	width: 70px;
 	background: black;
 }
-
-.search-box {
-    display: inline-block;
-    margin-left: 1px;
-}
-
-.container-2 {
-    width: 300px;
-    vertical-align: middle;
-    white-space: nowrap;
-    position: relative;
-}
-
-.container-2 input#search {
-    width: 50px;
-    height: 50px;
-    background: #ffcc00;
-    border: none;
-    font-size: 10pt;
-    float: left;
-    color: black;
-    padding-left: 35px;    /* -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px; */
-    color: #fff;
-
-    -webkit-transition: width .55s ease;
-    -moz-transition: width .55s ease;
-    -ms-transition: width .55s ease;
-    -o-transition: width .55s ease;
-    transition: width .55s ease;
-}
-
-.container-2 input#search::-webkit-input-placeholder {
-    color: #;
-}
-
-.container-2 input#search:-moz-placeholder {
-    color: #65737e;
-}
-
-.container-2 input#search::-moz-placeholder {
-   color: #65737e;
-}
-
-.container-2 input#search:-ms-input-placeholder {
-    color: #65737e;
-}
-
-.container-2 .icon {
-    position: absolute;
-    top: 50%;
-    margin-left: 17px;
-    margin-top: 17px;
-    z-index: 1;
-    color: black;
-}
-
-.container-2 input#search:focus,
-.container-2 input#search:active {
-    outline: none;
-    width: 300px;
-}
-
-.container-2:hover input#search {
-    width: 300px;
-}
-
-.container-2:hover .icon {
-    color: #93a2ad;
-}
-
-.header-menu {
-    text-align: center;    /* выравнивание текста по центру*/
-}
-
 .header-menu li {
     display: inline-block;
     margin: auto;
 }
-
-/* .header-menu li:first-child a { (обращение к 1 элеиенту в списке)
-	border-left: none; 
-} */
-.header-menu a {
-    /* background: green; */
-    text-transform: uppercase;    /* (все заглавные буквы) */
-    font-size: 10px;    /* (размер шрифта) */
-    line-height: 50px;    /* (высота строки) */
-    font-weight: 500;    /* (ширина шрифта) */
+.header-menu a {        
+    font-size: 14px;    
+    line-height: 50px;   
+    font-weight: 800;    
     margin-left: 10px;
     margin-right: 10px;
-    color: black;
-    display: block;    /*  border-left: 5px solid red; */
+    color: white;
+    display: block;    
 }
-
-.header-menu li a:hover {
-    /* (эффект появления) */
-    background: #ffcc00;
-    color: black;
-}
-
-.header-menu span {
-    color: #dcdcdc;
-}
-
-.toggle {
-    display: none;
-}
-
-.toggle li {
-    width: 40px;
-    height: 2px;
-    margin-bottom: 10px;
-    background: #000;
-}
-/* three-blocks============================================== */
-
+/* =============================three-blocks======================== */
 .three-blocks {
 	display: flex;
 	align-items: center;
-    justify-content: space-between; 
+    justify-content: space-around;
+   
 }
-
-/* left-block============================================== */
-
-.left-block {
-	height: 590px;
+/* ==============================block-left========================== */
+.block-left {
 	width: 50%;
-	background: green;
-	margin-left: 1%;
-	padding-top: 10px;
-	padding-bottom: 10px;
-
+	margin-left: 20px;
+	margin-top: 20px;
 }
-.top-left-block{
-	height: 49%;
-	background: yellow;
-	margin-bottom: 10px;
-	
+.top-left-block {
+	height: 300px;
+	background: #383535;    
+	margin-bottom: 20px;
 }
-.bottom-left-block{
-	height: 49%;
-	background: blue;
-	margin-top: 10px;
-
+.bottom-left-block {
+	height: 300px;
+	background: #383535;
 }
+.ct-chart{
+    height: 100%;
+}
+/* ============================block-center============================ */
+.block-center {
+	width: 28%;
+	margin-left: 20px;
+	margin-top: 20px;
 
-
-/* center-block =================================================*/
-
-.center-block {
-	height: 590px;
-	width: 30%;
-	background: green;
-	padding-top: 10px;
-	padding-bottom: 10px;
 }
 .top-center-block{
-	height: 58%;
-	background: yellow;
-	padding-bottom: 10px;
+	height: 400px;
+	background: #383535;	
+    margin-bottom: 20px;
 	
 }
 .bottom-center-block{
-	height: 38%;
-	background: blue;
-	margin-top: 10px;
+	height: 200px;
+	background: #383535;
 }
-/* right-block===================================================== */
-
-.right-block {
-	height: 620px;
+/* ===========================block-right============================ */
+.block-right {
 	width: 17%;
-	background: green;
-
+    margin-left: 20px;
+    margin-right: 0;
 }
 
 .top-right-block{
-	height: 50%;
-	background: brown;
-		
+	height: 320px;
+	background: #383535;
+    margin-top: 1px;
+    
 }
 .bottom-right-block{
-	height: 50%;
-	background: yellow;
+	height: 320px;
+	background: #383535;
+    margin-top: 1px;
+ }
+
+ /* ============================footer========================= */
+
+/* .footer{
+    height: 100px;
+    background: black;
+    
+} */
 	
-}
-/* footer========================================================= */
-
-.footer{
-	height: 100px;
-	background: black;
-	
-
-}
-
-
