--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ p {
 /* =============================three-blocks======================== */
 .three-blocks {
 	display: flex;
-	align-items: center;
+	align-items: end;
     justify-content: space-around;
    
 }
