--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,19 @@
 * {  
 	margin: 0;    
 	padding: 0;
+	transition: .3s all ease;
 }
-
 p {
 	color: white;
+}
+body{
+	background: blue;
 }
 
 .wrapper{
     background: black;
     height: 800px;
-    width: 1200px;
+    width: 80%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -32,6 +35,7 @@ p {
 .header-menu li {
     display: inline-block;
     margin: auto;
+    text-decoration: none;
 }
 .header-menu a {        
     font-size: 14px;    
@@ -40,7 +44,11 @@ p {
     margin-left: 10px;
     margin-right: 10px;
     color: white;
-    display: block;    
+    display: block;  
+    text-decoration: none;  
+}
+.header-menu li a:hover {
+	color: blue;
 }
 /* =============================three-blocks======================== */
 .three-blocks {
@@ -64,6 +72,7 @@ p {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: white;
 }
 .top-left-block-head li{
 	display: inline-block;
@@ -76,6 +85,7 @@ p {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: white;
 }
 .bottom-left-block-head li{
 	display: inline-block;
@@ -95,6 +105,9 @@ p {
 	background: #101010;	
     margin-bottom: 20px;
 	
+}
+.top-center-block-head{
+	color:white;
 }
 .bottom-center-block{
 	height: 200px;
