--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
 	margin: 0;    
 	padding: 0;
 }
+
+/* p {
+	color: white;
+} */
+
 .wrapper{
     background: black;
     height: 800px;
@@ -18,13 +23,58 @@
 	align-items: center;
     justify-content: space-between; 
 }
+/*logo*/
 .logo{
 	height: 70px;
 	width: 80px;
 	background: #383535;
 	color: white;
 	margin-right: 1px;
+	padding: 5px;
+	box-sizing: border-box;
+	position: relative;
 }
+.logo .part1, .logo .part2, .logo .part3 {
+	position: absolute;
+}
+.logo .part1, .logo .part3 {
+	width: 30px;
+	height: 30px;
+
+}
+.logo .part1 {
+	border-top-left-radius: 6px;
+	border-bottom-right-radius: 25px;
+	top: 25px;
+	left: 16px;
+	background: #f53c3b;
+	background: -moz-linear-gradient(45deg, #f53c3b 1%, #d845c5 100%);
+	background: -webkit-linear-gradient(45deg, #f53c3b 1%,#d845c5 100%);
+	background: linear-gradient(45deg, #f53c3b 1%,#d845c5 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f53c3b', endColorstr='#d845c5',GradientType=1 );
+}
+.logo .part2 {
+	width: 13px;
+	height: 70px;
+	background: #383535;
+	top: 0;
+	left: 35px;
+	z-index: 2;
+	transform: rotate(40deg);
+}
+.logo .part3 {
+	border-bottom-right-radius: 6px;
+	border-top-left-radius: 25px;
+	top: 18px;
+	left: 35px;
+	background: #f53c3b;
+	background: -moz-linear-gradient(45deg, #f53c3b 1%, #c542eb 100%);
+	background: -webkit-linear-gradient(45deg, #f53c3b 1%,#c542eb 100%);
+	background: linear-gradient(45deg, #f53c3b 1%,#c542eb 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f53c3b', endColorstr='#c542eb',GradientType=1 );
+}
+
+/*logo end*/
 .search-box{
 	color: white;
 	width: 412px;
@@ -45,7 +95,6 @@
 	background: #383535;
 	color: grey;
 }
-
 .header-menu{
 	width: 500px;
 	height: 70px;
@@ -85,12 +134,6 @@
 	height: 40px;
 	width: 40px;
 	margin-left: 20px;
-}
-#name-input{
-	background: #383535;
-	border:none;
-	box-sizing:none;
-	border-color: #383535;
 }
 
 /* =============================three-blocks======================== */
@@ -184,11 +227,12 @@
 }
 .top-left-block-footer{
 	display: flex;
-	justify-content: space-around;
 	align-items: center;
+	justify-content: space-around;
 	height: 50px;
 	position: absolute;
 	top: 40%;
+	width: 500px;
 }
 .TL p{
 	color: green;
@@ -199,12 +243,15 @@
 .Usd p{
 	color: pink;
 }
+
+
 .plan-and-button {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	margin-top: 20px;
 }
+
 .payment-plan{
 	margin-left: 20px;
 	width: 120px;
@@ -399,7 +446,15 @@ a.R-button {
 	height: 50px;
 	width: 50px;
 }
-
+/* .s-block2{
+	height: 66px;
+	background: #1D1B1B;
+	margin-bottom: 1px;
+}
+.s-block3{
+	height: 66px;
+	background: #1D1B1B;
+} */
 /* ===========================top-right-block============================ */
 
 .top-right-block{
@@ -463,7 +518,7 @@ a.R-button {
 .circle-img-text2{
 	display: flex;
 	align-items: end;
-	margin-bottom: 14px;
+	margin-bottom: 20px;
 }
 .text-block2 h6{
 	color: #d4c6c6;
@@ -548,6 +603,8 @@ a.R-button {
 	display: flex;
 	align-items: center;
 	margin-right: 10px;
+
+
 }
 .rangeslider{
 	background: #151515;
@@ -675,3 +732,4 @@ a.R-button {
     margin-left: 40px;
     margin-right: 40px;
 }
+
